Eliminacion de bootcamp, patron saga para transaccionalidad