@@ -9,7 +9,6 @@ import reactor.core.publisher.Mono;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 public class CapacidadValidatorService {
@@ -30,7 +29,7 @@ public class CapacidadValidatorService {
                     Set<Long> idsEncontradosSet = new HashSet<>(idsEncontrados);
                     List<Long> idsNoEncontrados = idsSolicitados.stream()
                             .filter(id -> !idsEncontradosSet.contains(id))
-                            .collect(Collectors.toList());
+                            .toList();
 
                     if (!idsNoEncontrados.isEmpty()) {
                         return Mono.error(new CapacidadNoEncontradaException(idsNoEncontrados));
